--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="nav navbar-nav">
           <li><a href="resume.html">Resume</a></li>
           <li><a href="senior.html">Senior Project</a></li> 
-          <li class="dropdown">
+  <!--        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="#">Action</a></li>
@@ -42,7 +42,7 @@
               <li class="divider"></li>
               <li><a href="#">One more separated link</a></li>
             </ul>
-          </li>
+          </li>  -->
         </ul>
         </ul>
       </div><!-- /.navbar-collapse -->
