--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
    <div class="container">
   
-     <H1> Devon Peel.com</H1>
+     <H1> Devon Peel.me</H1>
      <P>
        <div class="jumbotron other-color">
       <h1>Devon Peel</h1>
-      <p>Follower of Christ, Technology Master, </p>
+      <p>This is my personal webpage </p>
       <p></p>
    </div>
    </div>
