--- a/senior.html
+++ b/senior.html
@@ -84,10 +84,10 @@
     <tbody><tr><td>2</td><td>7:00</td><td>9:00</td><td>create process and class diagrams</td></tr></tbody>
     <tbody><tr><td>3</td><td>1:00</td><td>4:00</td><td>work with python psutil, systemd, and create cronjob</td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>    -->
   </table>
 </div>
      </P> 
