--- a/senior.html
+++ b/senior.html
@@ -31,18 +31,7 @@
         <ul class="nav navbar-nav">
 <!--          <li><a href="resume.html">Resume</a></li>     -->
           <li><a href="senior.html">Senior Project</a></li> 
-<!--          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>  --> 
+         </li> 
         </u>
       </div><!-- /.navbar-collapse -->
        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,7 +64,7 @@
         <!-- Default panel contents -->
         <div class="panel-heading">Captain's Log</div>
   <!-- Table -->
-  <table class="table">
+  <table class="table table-bordered" style="position: relative" >
     <thead><tr><th>Hours</th><th>Time In</th><th>Time Out</th><th>Description</th></thead>
     <tbody><tr><td>.75</td><td>3:00</td><td>3:45</td><td>Meet with advisors about projects</td></tr></tbody>
     <tbody><tr><td>.75</td><td>10:00</td><td>10:45</td><td>Setup preliminary UML Diagram</td></tr></tbody>
@@ -84,15 +73,49 @@
     <tbody><tr><td>2</td><td>7:00</td><td>9:00</td><td>create process and class diagrams</td></tr></tbody>
     <tbody><tr><td>3</td><td>1:00</td><td>4:00</td><td>work with python psutil, systemd, and create cronjob</td></tr></tbody>
     <tbody><tr><td>3</td><td>10:00</td><td>1:00</td><td>learn and work with  python pyramid</td></tr></tbody>
+    <tbody><tr><td>3</td><td>1:30</td><td>4:30</td><td>create basic html template with boottrap and pyramid</td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
-<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>    -->
+<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>    
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>  
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>    
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>  
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody> -->
   </table>
+ </div>
 </div>
-     </P> 
+
+ <br>
+ 
+<div class="container">
+ <h3> Feature Progress </h3>   
+     <div class="panel panel-default"> 
+     <div class="panel-heading">Features Needing Implementation</div>
+      <table class="table">
+        <tbody><tr><td>Implement LDAP login</tr></tbody>
+        <tbody><tr><td>Create a Postfix/MySQL backend with sqlalchemy</td></tr></tbody>
+        <tbody><tr class="info"><td>Create webview in python pyramid</td></tr></tbody>
+        <tbody><tr class="info"><td>Connect webview to the python backend</td></tr></tbody>
+        <tbody><tr class="info"><td>Finish python backend</td></tr></tbody>
+<!--        <tbody><tr><td></td></tr></tbody>
+        <tbody><tr><td></td></tr></tbody>
+        <tbody><tr><td></td></tr></tbody>
+        <tbody><tr><td></td></tr></tbody>-->
+
+      </table>
   </div>
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+ 
+<br>
+<div class="panel panel-default">
+<div class="panel-heading">Key</div>
+<table class="table table-bordered">
+  <tbody><tr><td class="info">Building</td><td class="success">Built   </td><td class="warning">Broken  </td><td class="danger">Not Done</td></tr></tbody>
+  <tbody><tr><td></td></tr></tbody>
+</table<> 
+</div>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
