--- a/senior.html
+++ b/senior.html
@@ -53,7 +53,7 @@
    <div class="container">
   
      <H1> Senior Project</H1>
-       <div class="jumbotron other-color">
+       <div class="jumbotron">
       <h1>Linux Updater</h1>
       <p>The Linux Updater is manager that deploys updates to systems simultaneously, alerting system administrators when users are logged in, jobs are running, and required restarts  </p>
       <p><a class="btn btn-primary btn-lg" href="https://github.com/dp3/LinuxUpdater" role="button">Get the code at Github</a></p>
@@ -61,10 +61,8 @@
    </div>
    <div class="container">
      <div class="panel panel-default">
-        <!-- Default panel contents -->
-        <div class="panel-heading">Captain's Log</div>
-  <!-- Table -->
-  <table class="table table-bordered" style="position: relative" >
+     <div class="panel-heading">Captain's Log</div>
+  <table class="table table-bordered" style="position: relative">
     <thead><tr><th>Hours</th><th>Time In</th><th>Time Out</th><th>Description</th></thead>
     <tbody><tr><td>.75</td><td>3:00</td><td>3:45</td><td>Meet with advisors about projects</td></tr></tbody>
     <tbody><tr><td>.75</td><td>10:00</td><td>10:45</td><td>Setup preliminary UML Diagram</td></tr></tbody>
@@ -105,20 +103,29 @@
 
       </table>
   </div>
- 
+</div> 
 <br>
 <div class="panel panel-default">
 <div class="panel-heading">Key</div>
 <table class="table table-bordered">
   <tbody><tr><td class="info">Building</td><td class="success">Built   </td><td class="warning">Broken  </td><td class="danger">Not Done</td></tr></tbody>
   <tbody><tr><td></td></tr></tbody>
-</table<> 
+</table> 
 </div>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-55797517-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </BODY>
 </HTML>
 
