--- a/senior.html
+++ b/senior.html
@@ -93,6 +93,7 @@
       <table class="table">
         <tbody><tr><td>Implement LDAP login</tr></tbody>
         <tbody><tr><td>Create a Postfix/MySQL backend with sqlalchemy</td></tr></tbody>
+        <tbody><tr><td>Implement auto-rollback when updates fail</td></tr></tbody> 
         <tbody><tr class="info"><td>Create webview in python pyramid</td></tr></tbody>
         <tbody><tr class="info"><td>Connect webview to the python backend</td></tr></tbody>
         <tbody><tr class="info"><td>Finish python backend</td></tr></tbody>
