--- a/senior.html
+++ b/senior.html
@@ -2,7 +2,7 @@
 <HTML>
    <HEAD>
       <TITLE>
-        Devon Peel.com  
+        Devon Peel.com
       </TITLE>
    </HEAD>
 <BODY>
@@ -11,8 +11,8 @@
 
    <!-- Optional theme -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-  
-  <div class="container">   
+
+  <div class="container">
     <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -30,8 +30,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 <!--          <li><a href="resume.html">Resume</a></li>     -->
-          <li><a href="senior.html">Senior Project</a></li> 
-         </li> 
+          <li><a href="senior.html">Senior Project</a></li>
+         </li>
         </u>
       </div><!-- /.navbar-collapse -->
        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -39,7 +39,7 @@
 <!--      <li><a href="SeniorProject1.pptx">Presentation 1 pptx</a></li> -->
           <li><a href="SeniorProject1.pdf">Presentation 1</a></li>
 <!--      <li><a href="senior.html">Senior Project</a></li>  -->
-<!--      <li><a href="SeniorProject2.pdf">Presentation 2</a></li>  -->
+          <li><a href="SeniorProject2.pdf">Presentation 2</a></li>
 <!--      <li><a href="SeniorProject3.pdf">Presentation 3</a></li>  -->
          </ul>
         </ul>
@@ -51,7 +51,7 @@
 
 
    <div class="container">
-  
+
      <H1> Senior Project</H1>
        <div class="jumbotron">
       <h1>Linux Updater</h1>
@@ -74,26 +74,26 @@
     <tbody><tr><td>3</td><td>1:30</td><td>4:30</td><td>create basic html template with boottrap and pyramid</td></tr></tbody>
     <tbody><tr><td>3</td><td>10:00</td><td>1:00</td><td>explore and work with  python pyramid</td></tr></tbody>
     <tbody><tr><td>3</td><td>11:00</td><td>2:00</td><td>setup a basic template in htmland work more on python pyramid</td></tr></tbody>
-<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>    
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>  
+<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>    
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>  
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody> -->
   </table>
  </div>
 </div>
 
  <br>
- 
+
 <div class="container">
- <h3> Feature Progress </h3>   
-     <div class="panel panel-default"> 
+ <h3> Feature Progress </h3>
+     <div class="panel panel-default">
      <div class="panel-heading">Features Needing Implementation</div>
       <table class="table">
         <tbody><tr><td>Implement LDAP login</tr></tbody>
         <tbody><tr><td>Create a Postfix/MySQL backend with sqlalchemy</td></tr></tbody>
-        <tbody><tr><td>Implement auto-rollback when updates fail</td></tr></tbody> 
+        <tbody><tr><td>Implement auto-rollback when updates fail</td></tr></tbody>
         <tbody><tr class="info"><td>Create webview in python pyramid</td></tr></tbody>
         <tbody><tr class="info"><td>Connect webview to the python backend</td></tr></tbody>
         <tbody><tr class="info"><td>Finish python backend</td></tr></tbody>
@@ -104,14 +104,14 @@
 
       </table>
   </div>
-</div> 
+</div>
 <br>
 <div class="panel panel-default">
 <div class="panel-heading">Key</div>
 <table class="table table-bordered">
   <tbody><tr><td class="info">Building</td><td class="success">Built   </td><td class="warning">Broken  </td><td class="danger">Not Done</td></tr></tbody>
   <tbody><tr><td></td></tr></tbody>
-</table> 
+</table>
 </div>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -129,4 +129,3 @@
 </script>
 </BODY>
 </HTML>
-
