--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="Theme/index.html">Resume</a></li>
           <li><a href="senior.html">Senior Project</a></li>
   <!--        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
@@ -78,4 +78,3 @@
 </script>
 </BODY>
 </HTML>
-
