--- a/senior.html
+++ b/senior.html
@@ -69,13 +69,13 @@
     <tbody><tr><td>1</td><td>10:00</td><td>11:00</td><td>Set up website</td></tr></tbody>
     <tbody><tr><td>.5</td><td>9:30</td><td>10:00</td><td>Update website</td></tr></tbody>
     <tbody><tr><td>2</td><td>7:00</td><td>9:00</td><td>create process and class diagrams</td></tr></tbody>
-    <tbody><tr><td>3</td><td>1:00</td><td>4:00</td><td>work with python psutil, systemd, and create cronjob</td></tr></tbody>D
+    <tbody><tr><td>3</td><td>1:00</td><td>4:00</td><td>work with python psutil, systemd, and create cronjob</td></tr></tbody>
     <tbody><tr><td>3</td><td>10:00</td><td>1:00</td><td>learn and work with  python pyramid</td></tr></tbody>
     <tbody><tr><td>3</td><td>1:30</td><td>4:30</td><td>create basic html template with boottrap and pyramid</td></tr></tbody>
     <tbody><tr><td>3</td><td>10:00</td><td>1:00</td><td>explore and work with  python pyramid</td></tr></tbody>
-    <tbody><tr><td>3</td><td>11:00</td><td>2:00</td><td>setup a basic template in htmland work more on python pyramid</td></tr></tbody>
-<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td>3</td><td>11:00</td><td>2:00</td><td>setup a basic template in html and work more on python pyramid</td></tr></tbody>
+    <tbody><tr><td>3</td><td>2:00</td><td>5:00</td><td>wrinting a few javascript functions</td></tr></tbody>
+  <!--  <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
