style and grammer changes

--- a/Theme/index.html
+++ b/Theme/index.html
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I am a sudent studying Computer Science at Kansas State University. I am currently a Student System Administrator in a heavy Linux enviroment</p>
+					<p>I am a student studying Computer Science at Kansas State University working as Student System Administrator for the Department of Computer Science. I have knowledgeable skills on Mac OS X, Linux and Windows with Ldap, Active Directory, web services, SAMBA, NFS and LVM.</p>
 				</div>
 				<div class="col-lg-3">
 		<!--			<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>  -->
@@ -97,7 +97,7 @@
 				<div class="col-lg-6">
 					<p><t>Bachelor of Science, Computer Science </t><br/>
 						Kansas State University <br/>
-						<i>5 Years Course</i>
+						<i>5 Year Course</i>
 					</p>
 				</div>
 				<div class="col-lg-3">
@@ -213,6 +213,24 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="javascript" height="130" width="130"></canvas>
+						<p>Ubuntu</p>
+						<br>
+						<script>
+							var doughnutData = [
+									{
+										value: 90,
+										color:"#1abc9c"
+									},
+									{
+										value : 10,
+										color : "#ecf0f1"
+									}
+								];
+								var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
+						</script>
+					</div>
+					<div class="col-lg-3 centered">
+						<canvas id="bootstrap" height="130" width="130"></canvas>
 						<p>Python</p>
 						<br>
 						<script>
@@ -226,30 +244,12 @@
 										color : "#ecf0f1"
 									}
 								];
-								var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
-						</script>
-					</div>
-					<div class="col-lg-3 centered">
-						<canvas id="bootstrap" height="130" width="130"></canvas>
-						<p>Bootstrap</p>
-						<br>
-						<script>
-							var doughnutData = [
-									{
-										value: 90,
-										color:"#1abc9c"
-									},
-									{
-										value : 10,
-										color : "#ecf0f1"
-									}
-								];
 								var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
 						</script>
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="wordpress" height="130" width="130"></canvas>
-						<p>C/C++</p>
+						<p>Bash</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -286,7 +286,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="photoshop" height="130" width="130"></canvas>
-						<p>Bash</p>
+						<p>C/C++</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -304,7 +304,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="illustrator" height="130" width="130"></canvas>
-						<p>Ubuntu</p>
+						<p>Bootstrap</p>
 						<br>
 						<script>
 							var doughnutData = [
