--- a/senior.html
+++ b/senior.html
@@ -74,8 +74,14 @@
     <tbody><tr><td>3</td><td>1:30</td><td>4:30</td><td>create basic html template with boottrap and pyramid</td></tr></tbody>
     <tbody><tr><td>3</td><td>10:00</td><td>1:00</td><td>explore and work with  python pyramid</td></tr></tbody>
     <tbody><tr><td>3</td><td>11:00</td><td>2:00</td><td>setup a basic template in html and work more on python pyramid</td></tr></tbody>
-    <tbody><tr><td>3</td><td>2:00</td><td>5:00</td><td>wrinting a few javascript functions</td></tr></tbody>
-  <!--  <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td>3</td><td>2:00</td><td>5:00</td><td>writing a few javascript functions</td></tr></tbody>
+    <tbody><tr><td>2</td><td>3:00</td><td>5:00</td><td>remove js and cleanup code</td></tr></tbody>
+    <tbody><tr><td>2</td><td>3:00</td><td>5:00</td><td>add the debian view, create a few functions in the html views</td></tr></tbody>
+    <tbody><tr><td>2.5</td><td>1:00</td><td>3:30</td><td>adding in user interactions with javascript</td></tr></tbody>
+    <tbody><tr><td>5</td><td>2:00</td><td>7:00</td><td>reworking update.py, adding in icinga calls</td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
