--- a/senior.html
+++ b/senior.html
@@ -79,7 +79,7 @@
     <tbody><tr><td>2</td><td>3:00</td><td>5:00</td><td>add the debian view, create a few functions in the html views</td></tr></tbody>
     <tbody><tr><td>2.5</td><td>1:00</td><td>3:30</td><td>adding in user interactions with javascript</td></tr></tbody>
     <tbody><tr><td>5</td><td>2:00</td><td>7:00</td><td>reworking update.py, adding in icinga calls</td></tr></tbody>
-    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
