--- a/senior.html
+++ b/senior.html
@@ -82,6 +82,17 @@
     <tbody><tr><td>4</td><td>1:00</td><td>5:00</td><td>migrated all the code from vim development to PyCharm development</td></tr></tbody>
     <tbody><tr><td>2</td><td>8:00</td><td>10:00</td><td>working with pyramid deform class, with interactive check boxes</td></tr></tbody>
     <tbody><tr><td>3</td><td>3:00</td><td>6:00</td><td>trying to add in macro layouts</td></tr></tbody>
+<!--    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
+    <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
     <tbody><tr><td></td><td></td><td></td><td></td></tr></tbody>
