adding pdf resume, and tutorials

--- a/index.html
+++ b/index.html
@@ -54,15 +54,29 @@
    <div class="container">
      <H1> Devon Peel.me</H1>
      <P>
-       <div class="jumbotron other-color">
-      <h1>Devon Peel</h1>
-      <p>This is my personal webpage </p>
-      <p></p>
-   </div>
-   </div>
-   <div class="container">
-  </P>
-  </div>
+      <div class="jumbotron">
+        <h1>Devon Peel</h1>
+        <p>This is my personal webpage </p>
+        <p></p>
+      </div>
+
+
+      <div class="jumbotron other-color">
+        <h1> Projects</H1>
+          <ul>
+            <li><a href="">Retro Pi</a></li>
+            <li><a href="">MythTV</a></li>
+            <li><a href="plex.html">Plex Media Server</a></li>
+            <li><a href="">TF2 Server</a></li>
+            <li><a href="">LVM Raid 5</a></li>
+          </ul>
+          <p></p>
+        </div>
+    </div>
+
+  <div class="container">
+ </P>
+ </div>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
