--- a/Theme/index.html
+++ b/Theme/index.html
@@ -41,7 +41,7 @@
 						<ul id="nav" class="nav">
 							<li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="icon-user"></i></a></li>
 							<li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a></li>
-<!--							<li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="icon-briefcase"></i></a></li> -->
+							<li class="menu-item"><a class="smoothScroll" href="#work" title="Work"><i class="icon-briefcase"></i></a></li>
 							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
 						</ul><!--/ uL#nav -->
 					</div><!-- /.dropdown -->
@@ -78,7 +78,7 @@
 					<p>I am a student studying Computer Science at Kansas State University working as Student System Administrator for the Department of Computer Science. I have knowledgeable skills on Mac OS X, Linux and Windows with Ldap, Active Directory, web services, SAMBA, NFS and LVM.</p>
 				</div>
 				<div class="col-lg-3">
-		<!--			<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>  -->
+					<p><a href="Resume.pdf"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
 				</div>
 
 			</div><!--/.row -->
@@ -113,6 +113,7 @@
 
 
 	<!--WORK DESCRIPTION -->
+  <section id="work" name="work"></section>
 	<div class="container desc">
 		<div class="row">
 
@@ -304,16 +305,16 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="illustrator" height="130" width="130"></canvas>
-						<p>Bootstrap</p>
+						<p>Html/CSS</p>
 						<br>
 						<script>
 							var doughnutData = [
 									{
-										value: 50,
+										value: 70,
 										color:"#1abc9c"
 									},
 									{
-										value : 50,
+										value : 30,
 										color : "#ecf0f1"
 									}
 								];
@@ -330,46 +331,46 @@
 
 <!--	<section id="work" name="work"></section> -->
 	<!--PORTFOLIO DESCRIPTION -->
-
-<!--	<div class="container desc">
+  <section id="portfolio" name="portfolio"></section>
+	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>PORTFOLIO</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><img class="img-responsive" src="assets/img/port01.jpg" alt=""></p>
+					<p><img class="img-responsive" href="www.lenexaTroop428.com" alt="www.lenexaTroop428.com" src="assets/img/T428website.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-					<p>CANALS OF ENGLAND</p>
-				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-					<sm><i class="icon-tag"></i> design</sm></more>
+					<p>Troop 428 Website </p>
+				<p><more>Created and manages a troop website for Boy Scouts of America. LenexaTroop428.com <br/><br/>
+					<sm><i class="icon-tag"></i> web design</sm></more>
 				</p>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/port02.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/MythTV.jpg" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-						<p>SANKEY</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> front-end</sm></more>
+						<p>MythTv</p>
+					<p><more>Setup and manages a home DVR on digitial cable, allowing the recording of simultaneous video streams.<br/><br/>
+						<sm><i class="icon-tag"></i> back-end</sm></more>
 					</p>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/port03.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/Plex.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-						<p>WE GROW</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> web design</sm></more>
+						<p>Plex Media</p>
+					<p><more>er took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+						<sm><i class="icon-tag"></i> back-end</sm></more>
 					</p>
 				</div>
 
 		</div>
 		<br>
 		<br>
-	</div> -->
+	</div>
 
 
 
