adding in color

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
 
-      <div class="jumbotron other-color">
+      <div class="jumbotron" style="background-color: #CDB5CD;">
         <h1> Projects</H1>
           <ul>
             <li><a href="">Retro Pi</a></li>
