--- a/Theme/index.html
+++ b/Theme/index.html
@@ -338,7 +338,7 @@
 					<h5>PORTFOLIO</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><img class="img-responsive" href="www.lenexaTroop428.com" alt="www.lenexaTroop428.com" src="assets/img/T428website.png" alt=""></p>
+					<p><img class="img-responsive" href="www.lenexaTroop428.com" alt="www.lenexaTroop428.com" src="assets/img/T428Website.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 					<p>Troop 428 Website </p>
