--- a/plex.html
+++ b/plex.html
@@ -92,7 +92,10 @@
     </pre>
 
     <H2>Plex Install</H2>
-
+    <pre>
+    $ wget https://downloads.plex.tv/plex-media-server/0.9.14.6.1620-e0b7243/plexmediaserver_0.9.14.6.1620-e0b7243_amd64.deb
+    sudo dpkg -i plexmediaserver_0.9.14.6.1620-e0b7243_amd64.deb
+    </pre>
 
   </p>
 </div>
