--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="Theme/index.html">Resume</a></li>
-          <li><a href="senior.html">Senior Project</a></li>
+          <li><a href="Resume/index.html">Resume</a></li>
+    <!--      <li><a href="senior.html">Senior Project</a></li> -->
   <!--        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
