edit code blocks

--- a/Theme/index.html
+++ b/Theme/index.html
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I am a student studying Computer Science at Kansas State University working as Student System Administrator for the Department of Computer Science. I have knowledgeable skills on Mac OS X, Linux and Windows with Ldap, Active Directory, web services, SAMBA, NFS and LVM.</p>
+					<p>I am a System Administrator for the  Kansas State University Mathematics Department. The department uses multiple operating systems Mac, Linux, and Windows along with many services Ldap, Active Directory, Geneti, PostgresSQL and Drupal</p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="Resume.pdf"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
@@ -101,8 +101,8 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>GRADUATING IN MAY 2015</sm><br/>
-					<imp><sm>IN PROGRESS</sm></imp>
+					<p><sm> May 2015</sm><br/>
+					<imp><sm>Graduated</sm></imp>
 					</p>
 				</div>
 
@@ -114,13 +114,33 @@
 
 	<!--WORK DESCRIPTION -->
   <section id="work" name="work"></section>
+
 	<div class="container desc">
 		<div class="row">
 
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>WORK</h5>
 				</div>
-				<div class="col-lg-6">
+
+        <div class="col-lg-6">
+          <p><t>System Administrator</t><br/>
+            Kansas State Mathematics Department<br/>
+          </p>
+          <p><more>
+            <ul>
+              <li>Preform daily tasks</li>
+              <li>Manage computers in a hybrid environment of Window and Linux on a Samba 4 AD</li>
+              <li>Maintain web servers in Media Wiki, Wordpress and Drupal </li>
+              <li></li>
+            </ul>
+          </more></p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>APRIL 2015 - PRESENT </sm></p>
+        </div>
+
+
+				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Student System Administrator</t><br/>
 						Kansas State Department of Computer Science.<br/>
 					</p>
@@ -135,7 +155,7 @@
 
 				</div>
 				<div class="col-lg-3">
-					<p><sm>APRIL 2012 - CURRENT</sm></p>
+					<p><sm>APRIL 2012 - April 2015</sm></p>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
@@ -232,7 +252,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="bootstrap" height="130" width="130"></canvas>
-						<p>Python</p>
+						<p>Centos 6 & 7</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -287,7 +307,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="photoshop" height="130" width="130"></canvas>
-						<p>C/C++</p>
+						<p>Python</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -305,7 +325,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="illustrator" height="130" width="130"></canvas>
-						<p>Html/CSS</p>
+						<p>Drupal & WordPress<p>
 						<br>
 						<script>
 							var doughnutData = [
