--- a/plex.html
+++ b/plex.html
@@ -10,6 +10,7 @@
 
       <!-- Optional theme -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+      <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 
    </HEAD>
 <BODY>
@@ -43,25 +44,25 @@
 
     Use apt-get to pull the samba packages:
 
-    <pre>
+    <pre class="prettyprint"> <code class="language-bash">
     $ sudo apt-get update
     $ sudo apt-get install samba
-    </pre>
+    </code></pre>
 
-    Lets create a samba user
-    <pre>
+    Lets create a samba user:
+    <pre class="prettyprint"> <code class="language-bash">
     $ useradd USER
     $ passwd USER
     $ smbpasswd -a USER
-    </pre>
+    </code></pre>
 
-    Now edit the config file
-    <pre>
-    sudo vim /etc/samba/smb.conf
-    </pre>
+    Now edit the config file:
+    <pre class="prettyprint"> <code class="language-bash">
+    $ sudo vim /etc/samba/smb.conf
+    </code></pre>
 
-    Insert the following line
-    <pre>
+    Insert the following lines:
+    <pre class="prettyprint"> <code class="language-bash">
     #this allows everyone to view the network share
     [SMABA UNSECURE]
     comment=PLEX-SAMBA
@@ -79,25 +80,40 @@
     writeable = yes
     read only = no
     guest ok = yes
-    </pre>
+    </code></pre>
 
-    Run 'testparm' to verify the config works
-    <pre>
+    Run 'testparm' to verify the config works:
+    <pre class="prettyprint"> <code class="language-bash">
     $ testparm
-    </pre>
+    </code></pre>
 
-    Restart samba
-    <pre>
+    Restart samba:
+    <pre class="prettyprint"> <code class="language-bash">
     $ sudo service smbd restart
-    </pre>
+    </code></pre>
 
     <H2>Plex Install</H2>
-    <pre>
+    <pre class="prettyprint"> <code class="language-bash">
     $ wget https://downloads.plex.tv/plex-media-server/0.9.14.6.1620-e0b7243/plexmediaserver_0.9.14.6.1620-e0b7243_amd64.deb
-    sudo dpkg -i plexmediaserver_0.9.14.6.1620-e0b7243_amd64.deb
-    </pre>
+    $ sudo dpkg -i plexmediaserver_0.9.14.6.1620-e0b7243_amd64.deb
+    </code></pre>
 
   </p>
 </div>
 
 </BODY>
+<footer>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>
+ (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ ga('create', 'UA-55797517-1', 'auto');
+ ga('send', 'pageview');
+
+</script>
+</footer>
