added template html

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       <div class="jumbotron" style="background-color: #CDB5CD;">
         <h1> Projects</H1>
           <ul>
-            <li><a href="">Retro Pi</a></li>
-            <li><a href="">MythTV</a></li>
+            <li><a href="template.html">Retro Pi</a></li>
+            <li><a href="template.html">MythTV</a></li>
             <li><a href="plex.html">Plex Media Server</a></li>
-            <li><a href="">TF2 Server</a></li>
-            <li><a href="">LVM Raid 5</a></li>
+            <li><a href="template.html">TF2 Server</a></li>
+            <li><a href="template.html">LVM Raid 5</a></li>
           </ul>
           <p></p>
         </div>
