--- a/Resume/index.html
+++ b/Resume/index.html
@@ -132,7 +132,7 @@
               <li>Maintain a three node Ganeti VM Cluster</li>
               <li>Setup Ansible Config management for Centos and Windows allowing easy config management and faster server deployments </li>
               <li>Build PXE boot operating systems installs via answer file for Windows and kickstart files for Centos </li>
-              <li>Create Chocolately Packages for the Chocolately Windows Package Manager </li>
+              <li>Create Chocolatey Packages for the Chocolatey Windows Package Manager </li>
             </ul>
           </more></p>
         </div>
