--- a/Resume/index.html
+++ b/Resume/index.html
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I am a System Administrator for the  Kansas State University Mathematics Department. The department uses multiple operating systems Mac, Linux, and Windows along with many services Ldap, Active Directory, Geneti, PostgresSQL, Media Wiki, Icinga2, Ansible, and Chocolately</p>
+					<p>I am a System Administrator for the  Kansas State University Mathematics Department. I have experience with Active Directory, Ansible(Linux and Windows), Chocolately, Ganeti, Icinga2, Ldap, MediaWiki and PostgresSQL. </p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="Resume.pdf"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
@@ -128,11 +128,11 @@
           </p>
           <p><more>
             <ul>
-              <li>Manage computers in a hybrid environment of Windows and Linux on a Samba 4 AD</li>
-              <li>Maintain a three node Ganeti VM Cluster</li>
+              <li>Manage computers in a hybrid environment of Windows and Linux on a Samba 4 domain</li>
+              <li>Maintain a Ganeti VM Cluster</li>
               <li>Setup Ansible Config management for Centos and Windows allowing easy config management and faster server deployments </li>
               <li>Build PXE boot operating systems installs via answer file for Windows and kickstart files for Centos </li>
-              <li>Create Chocolatey Packages for the Chocolatey Windows Package Manager </li>
+              <li>Create and manage Chocolatey Packages for the Chocolatey Windows Package Manager </li>
             </ul>
           </more></p>
         </div>
@@ -149,7 +149,7 @@
             <ul>
               <li>Manages server updates and migrations</li>
               <li>Migrated from MySql 5.0 to MySql 5.5 via scripts</li>
-              <li>Moved from AD 2003 to AD 2012 with unix attributes</li>
+              <li>Moved from a custom 2003 domain to 2012 doamin with unix attributes</li>
               <li>Amass of Linux and Windows server working together in a production environment</li>
             </ul>
           </more></p>
@@ -276,11 +276,11 @@
 						<script>
 							var doughnutData = [
 									{
-										value: 80,
+										value: 90,
 										color:"#1abc9c"
 									},
 									{
-										value : 20,
+										value : 10,
 										color : "#ecf0f1"
 									}
 								];
@@ -308,7 +308,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="photoshop" height="130" width="130"></canvas>
-						<p>Python</p>
+						<p>Kernel Virtual Machine  </p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -326,7 +326,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="illustrator" height="130" width="130"></canvas>
-						<p>Drupal & WordPress<p>
+						<p> MySQL and Postgress<p>
 						<br>
 						<script>
 							var doughnutData = [
