updating the resume section

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -380,11 +380,11 @@
 
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/MythTV.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/cockpit.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-						<p>MythTv</p>
-					<p><more>Setup and manages a home DVR on digitial cable, allowing the recording of simultaneous video streams.<br/><br/>
+						<p>Cockpit</p>
+					<p><more>Cockpit is a web interface for managing virtual machines running on the kernel virtual machine.<br/><br/>
 						<sm><i class="icon-tag"></i> back-end</sm></more>
 					</p>
 				</div>
@@ -398,7 +398,15 @@
 						<sm><i class="icon-tag"></i> back-end</sm></more>
 					</p>
 				</div>
-
+            	<div class="col-lg-6 col-lg-offset-3">
+					<p><img class="img-responsive" src="assets/img/owncloud.png" alt=""></p>
+				</div>
+				<div class="col-lg-3">
+						<p>Owncloud</p>
+					<p><more>Owncloud is a self hosted file syncing application equivalent to DropBox. <br/><br/>
+						<sm><i class="icon-tag"></i> back-end</sm></more>
+					</p>
+				</div>
 		</div>
 		<br>
 		<br>
